hey this is my first auth project

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL="mongodb+srv://Auth:Auth125521@cluster0.wuzqj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT = 3000
+JWT_SECRET= "dhgsahjjfsaghsfjg36745745rfeyewf65f@@^@&@*c6g7eg76"
