changed app password

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO_URL="mongodb+srv://Auth:Auth125521@cluster0.wuzqj.mongodb.net/?retryWrites
 PORT = 3000
 JWT_SECRET= "dhgsahjjfsaghsfjg36745745rfeyewf65f@@^@&@*c6g7eg76"
 AUTH_EMAIL = "mehtabbusinessdev@gmail.com"
-AUTH_PASS= "Business@12552178"
+AUTH_PASS= "ravs etuh lsnd oyyi"
