--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.ts",
-        "use": "@vercel/node"
+        "src": "src/index.ts", 
+        "use": "@vercel/node" 
       }
     ],
     "routes": [
@@ -13,3 +13,4 @@
       }
     ]
   }
+  
