updated some of the code to use with fromtend

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT = 5000
 JWT_SECRET= "dhgsahjjfsaghsfjg36745745rfeyewf65f@@^@&@*c6g7eg76"
 AUTH_EMAIL = "mehtabbusinessdev@gmail.com"
 AUTH_PASS= "ravs etuh lsnd oyyi"
+FRONTEND_URL="http://localhost:3000/"
